Header and app spacing fixed

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,7 +1,3 @@
-header {
-    height: 6rem;
-}
-
 .hamburger {
     display: none;
     right: 2rem;
@@ -9,7 +5,7 @@ header {
 }
 .close {
     display: none;
-    right: 2rem;
+    right: 2.5rem;
     position: absolute;
     z-index: 2!important;
 }
@@ -49,10 +45,6 @@ ul {
     .logout {
         font-size: 2rem;
         margin: 1rem;
-    }
-
-    .close {
-        z-index: 1;
     }
 
 }
